@startuml
title Student Enrollment Relationship Using User Role

top to bottom direction
hide circle
hide methods

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam nodesep 70
skinparam ranksep 70

skinparam Class {
  BorderColor #334155
  BackgroundColor #FFFFFF
  FontColor #0F172A
  HeaderBackgroundColor #E2E8F0
  FontSize 13
}

skinparam Arrow {
  Color #475569
  Thickness 1.2
  FontColor #1E293B
  FontSize 12
}

skinparam Note {
  BackgroundColor #FFF7ED
  BorderColor #F97316
  FontColor #7C2D12
  FontSize 12
}

class User {
  +id: bigint
  +name: string
  +email: string
  +requested_role: string
  +approved_at: datetime?
}

class ClassStudent {
  +student_id: bigint
  +class_id: bigint
  +created_at: timestamp
  +updated_at: timestamp
}

class CourseClass {
  +id: bigint
  +course_id: bigint
  +teacher_id: bigint?
  +capacity: integer
}

User "1" -- "0..*" ClassStudent : student role enrolls
ClassStudent "0..*" -- "1" CourseClass : linked to class

note right of User
  Students are not stored in a
  separate Student model.

  A student is a User with
  the student role assigned
  through Spatie.
end note

note right of ClassStudent
  Pivot table between users
  with the student role and
  course classes.

  Each record means that one
  student user is enrolled in
  one course class.
end note

@enduml